<resources>
    <string name="app_name" translatable="false">Skynet</string>
    <string name="app_name_full" translatable="false">Skynet Messenger</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="you">You</string>

    <string name="input_email">Email</string>
    <string name="input_nickname">Nickname</string>
    <string name="input_password">Password</string>
    <string name="input_password_confirm">Confirm password</string>
    <string name="input_message">Type a message…</string>
    <string name="input_search_user">Search user…</string>

    <string name="action_login">Log in</string>
    <string name="action_create_account">Create account</string>
    <string name="action_search">Search</string>
    <string name="action_wallpaper">Wallpaper</string>
    <string name="action_clear_chat">Clear chat</string>
    <string name="action_block">Block</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_new_group">Create group</string>
    <string name="action_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_continue">Continue</string>
    <string name="action_quote">Quote</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_info">Info</string>
    <string name="action_forward">Forward</string>
    <string name="action_beta_info">Beta info</string>
    <string name="action_report_issue">Report issue</string>

    <string name="link_create_account">New to Skynet? Create an account now</string>

    <string name="error_header_login">Login error</string>
    <string name="error_header_create_acc">Registration error</string>
    <string name="error_header_connect">Connection error</string>
    <string name="error_header_sync">Synchronization error</string>
    <string name="error_header_send">Sending error</string>
    <string name="error_no_connection">Could not reach the Skynet servers. Please check your internet connection and try again.</string>
    <string name="error_firebase">Could not initialize messaging system. Please make sure you have Google Play Services installed.</string>
    <string name="error_firebase_token">Invalid firebase token.</string>
    <string name="error_invalid_credentials">Username or password incorrect. Please try again.</string>
    <string name="error_invalid_credentials_restore">We could not restore your session, maybe you have changed your password. Please log in again.</string>
    <string name="error_invalid_session">Your session store was corrupted. Please log in again.</string>
    <string name="error_unconfirmed_account">Your account has not yet been confirmed. Please confirm your account by clicking the code we sent to you by email.</string>
    <string name="error_account_name_taken">Sorry, this email address is already in use. Please try a different one.</string>
    <string name="error_account_name_invalid">This email address is invalid. Please try a different one.</string>
    <string name="error_passwords_not_matching">The passwords you entered do not match.</string>
    <string name="error_must_upgrade">Your Skynet version is too old. Please update to v%s.</string>
    <string name="error_missing_keys">Sorry, we can\'t send the message. Your chat partner has to log in to Skynet at least once before messages can be sent.</string>
    <string name="error_corrupted_message_multi">During the last sync, we detected %d corrupted messages. This should not happen, please report an issue.</string>
    <string name="error_corrupted_message_single">Received internal message that could not be decrypted. Please report an issue</string>

    <string name="warn_header_eol">End of life warning</string>
    <string name="warn_can_upgrade">Your Skynet version is reaching its end of life. We recommend updating to v%s.</string>

    <string name="success_header_create_acc">Account created</string>
    <string name="success_create_acc">Your account has been created successfully. Please confirm it by clicking the code we sent to you by email.</string>

    <string name="question_header_logoff">Log off?</string>
    <string name="question_logoff">Do you really want to log off from this device?</string>

    <string name="question_header_delete">Delete message?</string>
    <string name="question_delete">Do you really want to delete this message? It will be deleted for everyone.</string>

    <string name="tab_header_contacts">Contacts</string>
    <string name="tab_header_chats">Chats</string>
    <string name="tab_header_daystream">Daystream</string>

    <string name="activity_add_contact">Add contact</string>
    <string name="activity_new_group">Create group</string>
    <string name="activity_preferences">Settings</string>

    <string name="progress_header">Please wait</string>
    <string name="progress_searching">Searching…</string>
    <string name="progress_login_preparing">Preparing to login…</string>
    <string name="progress_logging_in">Logging in…</string>
    <string name="progress_creating_account">Creating account…</string>
    <string name="progress_creating_channel">Adding contact…</string>
    <string name="progress_sending_messages">Sending messages…</string>

    <string name="pref_header_customize">Customize</string>
    <string name="pref_color_theme">Color theme</string>
    <string name="pref_animations">Animations</string>
    <string name="pref_sounds">Sounds</string>
    <string name="pref_enter_to_send">Enter to send</string>
    <string name="pref_enter_to_send_summary">Turns your enter key into a send key.</string>

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_notifications">New message notifications</string>
    <string name="pref_ringtone">Ringtone</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_status_led">Status LED</string>
    <string name="pref_status_led_color">Status LED color</string>

    <string name="pref_header_info">Info</string>
    <string name="pref_version">Version</string>
    <string name="pref_licenses">Licenses</string>
    <string name="pref_licenses_summary">View open-source licenses</string>
    <string name="pref_logoff">Log off</string>
    <string name="pref_logoff_summary">Log off your account from this device.</string>

    <string name="tip_start_chatting">Tap here to send your first message</string>
    <string name="tip_create_chats">Looks like you don\'t have any contacts yet. Add friends to Skynet via the Contacts tab.</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="draft">Draft</string>

    <string name="header_welcome">Welcome to Skynet!</string>
    <string name="header_nickname">Complete your registration by entering a nickname below.</string>
    <string name="header_editing">Editing message…</string>

    <string name="notification_channel_name">New message notifications</string>
    <string name="notification_channel_desc">Notifications for new chat messages are posted to this notification channel.</string>
    <string name="notification_subtitle">%1$d messages from %2$d chats</string>

    <string name="message_deleted">This message was deleted.</string>
    <string name="message_corrupted">This message cannot be decrypted.</string>

    <string name="state_online">online</string>
    <string name="state_typing">typing…</string>
    <string name="state_recording">recording…</string>
    <string name="state_last_seen_today">last seen today %s</string>
    <string name="state_last_seen_yesterday">last seen yesterday %s</string>
    <string name="state_last_seen">last seen %s</string>

</resources>

