<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.vectordata.skynet.ui.main.MainActivity">
    <item
        android:id="@+id/action_add_contact"
        android:orderInCategory="100"
        android:title="@string/action_add_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_group"
        android:orderInCategory="100"
        android:title="@string/action_new_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_beta_info"
        android:orderInCategory="100"
        android:title="@string/action_beta_info"
        app:showAsAction="never" />
</menu>
